--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <script>
+    <script>
       document.addEventListener('keydown', function (e) {
         if (
           e.key === 'F12' ||
@@ -42,6 +42,6 @@
       }
 
       setInterval(detectDevTools, 1000)
-    </script> -->
+    </script>
   </body>
 </html>
